Added Chat Feature

--- a/Frontend/src/styles/videoComponent.module.css
+++ b/Frontend/src/styles/videoComponent.module.css
@@ -10,7 +10,7 @@
     bottom:10vh;
     height: 20vh;
     width:auto;
-    right:0;
+    left:0;
     border-radius:20px;
 }
 
@@ -39,4 +39,63 @@
      min-width:30vw;
      border-radius:10px;
 
+}
+
+.chatRoom{
+    position: absolute;
+    height: 90vh;
+    right:0;
+    background:white;
+    border-radius:10px ;
+    width:40vh;
+    bottom:10vh;
+    padding-inline:20px;
+    
+    
+}
+
+.chatContainer{
+
+   
+    height:100%;
+}
+
+.chattingArea{
+
+    position: absolute;
+    bottom:0;
+
+}
+
+.navBar{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding-inline: 20px;
+    text-align: center; 
+   
+}
+
+.leftPanel{
+    height: 100%;
+    display:flex;
+    align-items: center;
+}
+.rightPanel{
+    display: flex;
+    align-items: center;
+
+}
+.rightPanel > img{
+    width: 30vw;
+    height: auto;
+    border-radius: 20px;
+}
+
+.meetContainer{
+     display: flex;
+     padding-inline:20px;
+     height: 80vh;
+     gap: 10vw;
+     justify-content: center;
 }
